--- a/style/style.css
+++ b/style/style.css
@@ -50,7 +50,9 @@ a {
     border: none;
 }
 .wrapper {
-    max-width: 1185px;
+    max-width: 100%;
+    padding: 0 128px;
+    box-sizing: border-box;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -380,7 +382,7 @@ header {
     text-decoration: none;
 }
 header .wrapper {
-    max-width: 1185px;
+    max-width: 100%;
     width: 100%;
     margin: 0 auto;
     box-sizing: border-box;
@@ -392,6 +394,7 @@ header .wrapper {
     max-width: 100%;
     width: 100%;
     box-sizing: border-box;
+    padding: 0 !important; 
 }
 .bunnerImg {
     width: 2000px;
@@ -400,7 +403,9 @@ header .wrapper {
 .bunnerImg img {
     max-width: 100%;
     overflow: hidden;
-    max-width: 2000px;
+    min-height: 750px;
+    height: 100%;
+    object-fit: cover;
 }
 header .wrapper ul {
     display: flex;
@@ -472,7 +477,7 @@ h1 {
     font-size: 20px;
     line-height: 180%;
     color: #1E1D28;
-    width: 40%;
+    width: 22%;
     margin-bottom: 32px;
 }
 .bunner .wrapper .bunnerLeft > a {
@@ -881,7 +886,7 @@ h1 {
     position: absolute;
     top: 65%;
     transform: translateX(-65%);
-    left: -30px;
+    left: 80px;
     width: 48px;
     height: 48px;
     border: 1px solid rgba(30, 29, 40, 0.12);
@@ -907,7 +912,7 @@ h1 {
 .blogSliderNext {
     position: absolute;
     top: 65%;
-    right: -100px;
+    right: 20px;
     width: 48px;
     height: 48px;
     transform: translateX(-65%);
@@ -1071,7 +1076,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    min-width: 480px;
+    min-width: 450px;
     margin-right: 24px;
     width: 50%;
 }
@@ -1227,6 +1232,8 @@ h1 {
 }
 .aboutMaxwiseRight img {
     max-width: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 .aboutMaxwiseRight {
     width: 48%;
@@ -1368,7 +1375,7 @@ h1 {
     font-size: 17px;
     line-height: 150%;
     color: #1E1D28;
-    height: 80px;
+    height: 78px;
     overflow: hidden;
     margin: 32px 24px 24px 24px;
     transition: all 0.3s;
@@ -1471,11 +1478,13 @@ h1 {
     text-align: center;
 }
 .footerTop {
+    width: 100%;
     margin-top: 31px;
     display: flex;
     align-items: flex-start;
     padding-bottom: 30px;
     border-bottom: 1px solid #E3E0ED;
+    justify-content: space-between;
 }
 .footerSitemap {
     margin-right: 14px;
@@ -1660,6 +1669,10 @@ h1 {
     height: 20px;
     display: flex;
     margin-right: 10px;
+}
+.footerMap {
+    margin-left: 24px;
+    width: 50%;
 }
 .footerMap img {
     max-width: 100%;
@@ -3060,11 +3073,10 @@ h1 {
     margin-top: 85px;
 }
 .bunnerLeft {
-    max-width: 1185px;
+    max-width: 100%;
     margin: 0 auto;
     width: 100%;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 128px;
 }
 
 .fromAreasRightSupport {
@@ -3164,6 +3176,15 @@ h1 {
     .transformSectionLeft {
         margin-right: 100px;
     }
+    .wrapper {
+        padding: 0 64px !important;
+      }
+      .bunnerLeft {
+        left: 64px;
+      }
+      header .wrapper {
+        padding: 0 16px !important;
+      }
 }
 @media (max-width: 1200px) {
 .wrapper {
@@ -3175,6 +3196,9 @@ h1 {
 }
 .comentForm textarea {
     width: 100%;
+}
+.aboutMaxwiseContainer {
+    padding: 0 !important;
 }
 .transformSliderDots .slick-dots {
     width: 100%;
