--- a/style/style.css
+++ b/style/style.css
@@ -274,13 +274,14 @@ a {
     right: 0;
     transition:all .6s;
     z-index: 100;
-    display: flex;
+    display: none;
     padding-top: 10%;
     justify-content: flex-end;
     opacity: 0;
 }
 .showContainerAnimationOpacity {
     opacity: 1;
+    display: flex;
 }
 .showContainerSection {
     transform: translateX(110%);
@@ -4315,16 +4316,20 @@ header {
         object-position: center;
     }
     .fromAreasScroll {
-        overflow: scroll;
-        height: 100%;
+        overflow: auto;
+        height: 75%;
         width: 100%;
         background: #FFF5F2;
         border-radius: 24px 24px 0 0;
+        box-shadow: 0px 20px 50px rgba(18, 17, 39, 0.08);
         box-sizing: border-box;
         padding: 32px 16px;
         display: flex;
         position: absolute;
         flex-direction: column-reverse;
+    }
+    .fromAreasTabsContainerLeft {
+        overflow: scroll;
     }
     .postContentScrollCard {
         margin-left: 0 !important;
@@ -4826,7 +4831,8 @@ header {
     }
     .fromAreasTabsContainer.activeBlog {
         padding-top: 16px !important;
-        box-shadow: 0px 20px 50px rgba(18, 17, 39, 0.08);
+        box-shadow: unset;
+        background: transparent;
         border-radius: 8px;
     }
     .fromAreasTabsContainer.activeBlog {
@@ -5002,8 +5008,7 @@ header {
 .fromAreasTabsContainer.activeBlog {
     position: fixed;
     display: flex;
-    box-shadow: 0px 20px 50px rgba(18, 17, 39, 0.08);
-    background: rgba(0,0,0, 0.9);
+    background: transparent;
     border-radius: 0;
     width: 100%;
     flex-direction: column-reverse;
@@ -5019,6 +5024,7 @@ header {
 }
 .fromAreasRightPositions .fromAreasTabsContainer .fromAreasScroll {
     width: 100%;
+    box-shadow: 0px 20px 50px rgba(18, 17, 39, 0.08);
 }
 .suportFromRight {
     width: 100% !important;
@@ -5169,6 +5175,14 @@ header {
     background: url(../img/noise.png), #FFF5F2 !important;
     background-size: auto;
     background-repeat: repeat;
+}
+.showContainerSection {
+    width: 90%;
+    padding: 16px;
+    height: fit-content;
+}
+.showContainerFull {
+    font-size: 14px;
 }
 }
 @media (max-width: 1350px) {
